# Military_journal

./: GRADES_MIGRATION_README.md  alembic.ini  books.db  clear_disciplinary.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 44a373e6fb90_add_url_to_attachments.py  85d7ce3b115b_initial_init.py  c200a6d12681_initial_schema_reset.py  e1fa3f829298_add_description_to_topographic_symbols.py  fa99930ceaa7_update_canvas_engine_type_enum.py
backend/docker/: docker-compose.dev.yml  docker-compose.prod.yml  init-letsencrypt.sh
backend/docker/nginx/: default.conf.template
backend/docs/: database.md  development.md
backend/scripts/: reset_and_seed.py  seed_data.py
backend/src/: .env  database.py  exceptions.py  main.py  reset_and_seed.py  security.py  seed_data.py  storage.py
backend/src/api/: analytics.py  assessment_events.py  assignments.py  attachments.py  attendance.py  auth.py  books.py  canvas.py  dependencies.py  disciplinary.py  gamification.py  grades.py  groups.py  router.py  schedule.py  students.py  subjects.py  teachers.py  users.py
backend/src/models/: __init__.py  assessment_events.py  assignments.py  attachments.py  attendance.py  books.py  canvas.py  disciplinary.py  gamification.py  grades.py  groups.py  schedule.py  students.py  subjects.py  teachers.py  users.py
backend/src/schemas/: __init__.py  analytics.py  assessment_events.py  assignments.py  attachments.py  attendance.py  books.py  canvas.py  errors.py  (+9 more)
(+403 files in other folders)
